examples/test/testpolicy13339.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13339
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key36: value45
      key16: value38
      key47: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value37
          key19: value48
      podSelector:
        matchLabels:
          key48: value13
